Attempt to fix footer being too big

--- a/_sass/jekyll-theme-modernist.scss
+++ b/_sass/jekyll-theme-modernist.scss
@@ -279,6 +279,7 @@ footer {
   padding:20px 0 0;
   color:#ccc;
   overflow:hidden;
+  font-size:11px;
 
   a {
     color:#fff;
